# ccmmd-2026-meme-detection

./: .env  .gitignore  main.py  pyproject.toml
miso_utils/: __init__.py  datasets.py
src/: bert_dataset.py  clip_dataset.py  clipbert.py  clipbert_classifier.py  clipclip.ipynb  eda.ipynb  main.ipynb  main.py  qwen3.py  qwen3_dataset.py  qwen3_finetune_miso.py  qwen3_thinking.py  textonly.ipynb  textonly.py  tree.ipynb
